# Raquet

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  Raquet  boringcompile.sh  compile.sh  desktop.ini  lolcat  program.rc  windowscompile.sh
.github/: FUNDING.yml
assets/: main.ppf  test.ppf
doxygen/html/: doxygen_crawl.html  index.html  pages.html
doxygen/html/d3/dcc/: md__r_e_a_d_m_e.html
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  searchdata.js
doxygen/latex/: refman.tex
doxygen/latex/d3/dcc/: md__r_e_a_d_m_e.tex
include/: Audio_Scope.cpp  Audio_Scope.hpp  Music_Player.c  Music_Player.cpp  Music_Player.h  Music_Player.hpp  Raquet.c  Raquet.h  Raquet_Math.c  Raquet_Math.h  fps.c  fps.h  gmewrapper.h  input.h  math_functions.c  math_functions.h  nes.h  ppf_functions.c  ppf_functions.h
include/Raquet/: Raquet.h  Raquet_Actor.h  Raquet_CHR.h  Raquet_Input.h  Raquet_Math.h  Raquet_Misc.h  Raquet_PPF.h  Raquet_Palette.h  Raquet_Settings.h  Raquet_Shorthands.h  Raquet_Sound.h  Raquet_Types.h  Raquet_Video.h
src/: .main.c.swp  Raquet.c  Raquet.h  Raquet_Math.c  main.c  main.h
src/Raquet/: Raquet.c  Raquet_Actor.c  Raquet_CHR.c  Raquet_Input.c  Raquet_Math.c  Raquet_Misc.c  Raquet_PPF.c  Raquet_Palette.c  Raquet_Sound.c  Raquet_Video.c
winclude/: program.rc
winclude/i686-w64-mingw32/lib/: libSDL2_mixer.la
winclude/i686-w64-mingw32/lib/pkgconfig/: SDL2_mixer.pc
winclude/include/SDL2/: SDL_config.h  SDL_revision.h
